--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -25,13 +25,14 @@
         </style>
     </head>
     <body>
-        <div class="center">
-            <h1>Building your resume has never been easier</h1>
+        <h1>Your resume is ready to download</h1>
+        <div class="nav">
+            <a class="button" href="">Download</a>
+            <a class="button" href="format.html">Edit Info</a>
+            <a class="button" href="../../index.html">home</a>
+        </div>
+        <div class="resume">
             
-            <a class="button" href="src/pages/format.html">Click here to start</a>
-            
-            <img src="src/images/homepage.jpg">
-
         </div>
     </body>
 </html>
