--- a/src/pages/contactinfo.html
+++ b/src/pages/contactinfo.html
@@ -12,6 +12,16 @@
             h1{
                 font-weight: normal;
             }
+            input{
+                width: 220px;
+                height: 30px;
+                font-size: 18px;
+
+            }
+            .contact{
+                width: 617px;
+                height: 463px;
+            }
             .button{
                 background-color: #0076ff;
                 border: none;
@@ -25,13 +35,15 @@
         </style>
     </head>
     <body>
-        <div class="center">
-            <h1>Building your resume has never been easier</h1>
-            
-            <a class="button" href="src/pages/format.html">Click here to start</a>
-            
-            <img src="src/images/homepage.jpg">
-
+        <div>
+            <h1>What is your contact info?</h1>
+            <input type="text" id="first_name" placeholder="First Name">
+            <input type="text" id="last_name" placeholder="Last Name">
+            <input type="tel" id="phone" placeholder="Phone Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+            <input type="text" id="address" placeholder="Address">
+            <a class = "button" href="format.html">Back</a>
+            <a class = "button" href="employment.html">Next</a>
         </div>
+        <img src="../images/contactinfo.jpg">
     </body>
 </html>
