Cropped the images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             body{
                 font-family: Arial;
             }
+            img{
+                width: 537px;
+                height: 324px;
+            }
             h1{
                 font-weight: normal;
             }
