--- a/src/pages/contactinfo.html
+++ b/src/pages/contactinfo.html
@@ -18,6 +18,10 @@
                 font-size: 18px;
 
             }
+            img{
+                width: 617px;
+                height: 463px;
+            }
             .contact{
                 width: 617px;
                 height: 463px;
