--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -12,6 +12,10 @@
             h1{
                 font-weight: normal;
             }
+            img{
+                width: ;
+                height: ;
+            }
             .button{
                 background-color: #0076ff;
                 border: none;
