--- a/src/pages/education.html
+++ b/src/pages/education.html
@@ -18,6 +18,10 @@
                 font-size: 18px;
 
             }
+            img{
+                width: 720px;
+                height: 540px;
+            }
             .button{
                 background-color: #0076ff;
                 border: none;
