--- a/src/pages/employment.html
+++ b/src/pages/employment.html
@@ -11,6 +11,10 @@
             h1{
                 font-weight: normal;
             }
+            img{
+                width: 644px;
+                height: 483px;
+            }
             .button{
                 background-color: #0076ff;
                 border: none;
