Home page centered

--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
         <style>
             body{
                 font-family: Arial;
+                height: 100%;
             }
 
             img{
+                position: relative;
+                top: 603px;
+                right: 100px;
                 width: 537px;
                 height: 324px;
             }
             
             h1{
+                position: relative;
+                top: 300px;
                 font-weight: normal;
             }
+            .center{
+                margin: auto;
+                text-align: center;
+
+            }
+            
             .button{
+                position: relative;
+                left: 250px;
                 background-color: #0076ff;
                 border: none;
                 border-radius: 4px;
