Images now in correct positions

--- a/src/pages/contactinfo.html
+++ b/src/pages/contactinfo.html
@@ -25,7 +25,9 @@
             img{
                 width: 617px;
                 height: 463px;
-                
+                position: fixed;
+                top: 60%;
+                left: 70%;
                 
             }
             .center{
