--- a/src/pages/education.html
+++ b/src/pages/education.html
@@ -26,6 +26,9 @@
             }
 
             img{
+                position: fixed;
+                top: 50%;
+                left: 60%;
                 width: 720px;
                 height: 540px;
             }
