--- a/src/pages/employment.html
+++ b/src/pages/employment.html
@@ -15,6 +15,9 @@
             img{
                 width: 644px;
                 height: 483px;
+                position: fixed;
+                top: 50%;
+                left: 70%;
             }
             .center{
                 margin: auto;
