--- a/src/pages/education.html
+++ b/src/pages/education.html
@@ -19,10 +19,9 @@
 
             input{
                 margin: 4px;
-                width: 220px;
+                width: 320px;
                 height: 30px;
                 font-size: 18px;
-
             }
 
             img{
@@ -40,6 +39,7 @@
 
             .info{
                 position: relative;
+                top: 20px;
                 padding-left: 20px;
                 padding-right: 20px;
                 padding-bottom: 10px;
@@ -48,8 +48,8 @@
 
             .navigation{
                 position: relative;
-                padding-top: 10px;
-                right: 200px;
+                padding-top: 40px;
+                right: 175px;
             }
 
             .button{
@@ -61,6 +61,7 @@
                 text-align: center;
                 text-decoration: none;
                 font-size: 18px;
+                margin: 20px;
             }
             
         </style>
