Fixed positions, removed bg from imgs

--- a/src/pages/employment.html
+++ b/src/pages/employment.html
@@ -22,6 +22,7 @@
             .center{
                 margin: auto;
                 text-align: center;
+                padding-top: 200px;
                 
             }
             .workhistory{
@@ -58,6 +59,6 @@
             </div>
         </div>
         
-        <img src="../images/employment.jpg">
+        <img src="../images/employment.png">
     </body>
 </html>
