--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -8,9 +8,13 @@
         <style>
             body{
                 font-family: Arial;
+                height: 100%;
             }
             h1{
                 font-weight: normal;
+                position: relative;
+                top: 300px;
+                left: 700px;
             }
             .button{
                 background-color: #0076ff;
@@ -22,17 +26,23 @@
                 text-decoration: none;
                 font-size: 18px;
             }
+            .center{
+                padding-top: 300px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
         </style>
     </head>
     <body>
         <h1>Your resume is ready to download</h1>
-        <div class="nav">
-            <a class="button" href="">Download</a>
-            <a class="button" href="format.html">Edit Info</a>
-            <a class="button" href="../../index.html">home</a>
-        </div>
-        <div class="resume">
+        <div class="center">
             
+            <div class="nav">
+                <a class="button" href="">Download</a>
+                <a class="button" href="format.html">Edit Info</a>
+                <a class="button" href="../../index.html">Home</a>
+            </div>
         </div>
     </body>
 </html>
