--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -25,6 +25,7 @@
                 text-align: center;
                 text-decoration: none;
                 font-size: 18px;
+                margin: 20px;
             }
             .center{
                 padding-top: 300px;
