--- a/src/pages/employment.html
+++ b/src/pages/employment.html
@@ -28,6 +28,7 @@
             .workhistory{
                 padding: 50px;
             }
+            
             .button{
                 background-color: #0076ff;
                 border: none;
@@ -37,6 +38,7 @@
                 text-align: center;
                 text-decoration: none;
                 font-size: 18px;
+                margin: 10px;
             }
         </style>
     </head>
@@ -49,7 +51,7 @@
         <div class="center">
             <h1>What is your employment history?</h1>
             <div class ="workhistory">
-                <a class="button" href="">Add Work History</a>
+                <a class="button" href="jobfill.html">Add Work History</a>
             </div>
             <div class="navigation">
                 
