Background added to pages

--- a/src/pages/employment.html
+++ b/src/pages/employment.html
@@ -8,6 +8,8 @@
             body{
                 height: 100%;
                 font-family: Arial;
+				background: url(https://i.imgur.com/MJAkxbh.png);
+
             }
             h1{
                 font-weight: normal;
