--- a/src/pages/format.html
+++ b/src/pages/format.html
@@ -10,6 +10,8 @@
                 height: 100%;
                 display: grid;
                 font-family: Arial;
+				background: url(https://i.imgur.com/MJAkxbh.png);
+
 
             }
             h1{
