--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -9,6 +9,8 @@
             body{
                 font-family: Arial;
                 height: 100%;
+				background: url(https://i.imgur.com/MJAkxbh.png);
+
             }
             h1{
                 font-weight: normal;
