--- a/src/pages/education.html
+++ b/src/pages/education.html
@@ -11,6 +11,8 @@
                 font-family: Arial;
                 height: 100%;
                 display: grid;
+				background: url(https://i.imgur.com/MJAkxbh.png);
+
             }
             
             h1{
