--- a/src/pages/jobfill.html
+++ b/src/pages/jobfill.html
@@ -6,10 +6,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
+			
             body,html{
                 font-family: Arial;
                 height: 100%;
                 display: grid;
+				background: url(https://i.imgur.com/MJAkxbh.png);
             }
             h1{
                 font-weight: normal;
