--- a/src/pages/download.html
+++ b/src/pages/download.html
@@ -9,7 +9,7 @@
             body{
                 font-family: Arial;
                 height: 100%;
-				background: url(https://i.imgur.com/MJAkxbh.png);
+				background: url(../images/bg.png);
 
             }
             h1{
