--- a/src/pages/education.html
+++ b/src/pages/education.html
@@ -11,7 +11,7 @@
                 font-family: Arial;
                 height: 100%;
                 display: grid;
-				background: url(https://i.imgur.com/MJAkxbh.png);
+				background: url(../images/bg.png);
 
             }
             
