--- a/src/pages/employment.html
+++ b/src/pages/employment.html
@@ -8,7 +8,7 @@
             body{
                 height: 100%;
                 font-family: Arial;
-				background: url(https://i.imgur.com/MJAkxbh.png);
+				background: url(../images/bg.png);
 
             }
             h1{
