--- a/src/pages/format.html
+++ b/src/pages/format.html
@@ -10,7 +10,7 @@
                 height: 100%;
                 display: grid;
                 font-family: Arial;
-				background: url(https://i.imgur.com/MJAkxbh.png);
+				background: url(../images/bg.png);
 
 
             }
