Added email address and zip code

--- a/src/pages/contactinfo.html
+++ b/src/pages/contactinfo.html
@@ -74,8 +74,10 @@
 
                 <input type="text" id="first_name" placeholder="First Name">
                 <input type="text" id="last_name" placeholder="Last Name">
+                <input type="text" id="email" placeholder="Email Address">
                 <input type="tel" id="phone" placeholder="Phone Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
                 <input type="text" id="address" placeholder="Address">
+                <input type="text" id="zip_code" placeholder="Zip Code">
                 
             </div>
             <div class="navigation">
